# Swim-Agents

./: .env.example  .gitignore  README.md  build_inside_existing.sh  config.yaml  gemeinde_geocoded.csv  main.py  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
config/settings/: development.yaml
data/harmonized/: Extended_200_Vet_Anaesthesia_QA.csv  HOMOGEN_Agent_2020_Deutsche_Seen_Harmonisierte_Daten_Output.csv  HOMOGEN_Agent_2021_Seen_Daten_Harmonisierung_Output.csv  HOMOGEN_Agent_2022_Alle_Seen_Harmonisierte_Daten_Output.csv  HOMOGEN_Agent_2023_Seen_Monitoring_Harmonisiert_Output.csv  HOMOGEN_Agent_2024_Aktuelle_Seen_Harmonisierte_Daten_Output.csv  HOMOGEN_Agent_2025_Seen_Daten_Harmonisierung_Prognose_Output.csv  (+15 more)
docker/: Dockerfile.calibro  Dockerfile.homogen  Dockerfile.orchestrator  Dockerfile.predikt  Dockerfile.visios  docker-compose.yml
docs/: 1_ARCHITECTURE.md  2_DEMO_SCRIPT.md  3_PITCH.md  4_METRICS.md  5_WHY_THIS_MATTERS.md  PROGRESS.md
models/: drift_reference.json  model_metadata.json
notebooks/: 02_homogen_testing.ipynb  03_research_phase1_eda.ipynb
outputs/: ALL_LAKES_timeseries.json  Chiemsee_timeseries.csv  Chiemsee_timeseries.json
scripts/: convert_lake_json_to_parquet.py  flatten_lake_json.py  run_uba_ingestion.py
swim/: launcher.py
tests/: conftest.py  geo_linking.py  inspect_data.py  test_auth.py  test_drift_detector.py  test_gee_access.py  test_harmonized_output.py  test_observability.py  test_predikt_agent.py  test_rate_limit.py  test_risk_fusion.py  test_sanitize.py  test_shared.py  test_visios.py
(+132 files in other folders)
